<!--
  ~ Copyright (c) 2021 Simon Johnson <simon622 AT gmail DOT com>
  ~
  ~ Find me on GitHub:
  ~ https://github.com/simon622
  ~
  ~ Licensed to the Apache Software Foundation (ASF) under one
  ~ or more contributor license agreements.  See the NOTICE file
  ~ distributed with this work for additional information
  ~ regarding copyright ownership.  The ASF licenses this file
  ~ to you under the Apache License, Version 2.0 (the
  ~ "License"); you may not use this file except in compliance
  ~ with the License.  You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing,
  ~ software distributed under the License is distributed on an
  ~ "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
  ~ KIND, either express or implied.  See the License for the
  ~ specific language governing permissions and limitations
  ~ under the License.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.slj</groupId>
    <artifactId>mqtt-sn</artifactId>
    <version>0.1.17</version>

    <packaging>pom</packaging>

    <scm>
        <url>https://github.com/simon622/mqtt-sn</url>
        <connection>scm:git:https://github.com/simon622/mqtt-sn.git</connection>
    </scm>

    <licenses>
        <license>
            <name>Apache 2 License</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>simon622</id>
            <name>Simon Johnson</name>
            <email>simon622@gmail.com</email>
        </developer>
    </developers>

    <modules>
        <module>mqtt-sn-client</module>
        <module>mqtt-sn-cloud-client</module>
        <module>mqtt-sn-codec</module>
        <module>mqtt-sn-core</module>
        <module>mqtt-sn-gateway</module>
        <module>mqtt-sn-gateway-connector-aws-iotcore</module>
        <module>mqtt-sn-gateway-connector-google-iotcore</module>
        <module>mqtt-sn-gateway-connector-paho</module>
        <module>mqtt-sn-load-test</module>
        <module>mqtt-sn-gateway-console</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.build.resourceEncoding>UTF-8</project.build.resourceEncoding>
        <junit.version>4.13.1</junit.version>
        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
        <maven.compiler.target>1.8</maven.compiler.target>
        <maven.compiler.source>1.8</maven.compiler.source>
        <jlf4j.version>2.0.3</jlf4j.version>
        <logback.version>1.3.4</logback.version>
        <maven.build.shade.version>3.4.1</maven.build.shade.version>
        <jackson.version>2.10.2</jackson.version>
        <yaml.version>1.11</yaml.version>
        <mqtt-sn.version>0.1.17</mqtt-sn.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${jlf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>${logback.version}</version>
        </dependency>
        <dependency>
            <groupId>org.yaml</groupId>
            <artifactId>snakeyaml</artifactId>
            <version>${yaml.version}</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

</project>